# sor-linux-sim

./: .gitignore  CMakeLists.txt  COMPLETION_REPORT.md  Makefile  OGRYZEK_ARKADIUSZ_156402_opis_SOR.md  QUICK_START.md  RAPORT_FINALNY.md  README.md  TEST_RESULTS.txt  TODO.txt  dyrektor  generator  komendy_check.txt  lekarz  pacjent  rejestracja  sor  sor_log.txt
include/: common.h  config.h  ipc.h  protocol.h  roles.h  util.h
notes/: OGRYZEK_ARKADIUSZ_156402_opis_SOR.md  agent.txt  architecture.md  bazowe_dane.txt  build.txt  check.txt  komendy.txt  prepdf.txt  todo.txt  todoNew.txt  tools.txt  wymagania.txt
src/: director.cpp  doctor.cpp  generator.cpp  ipc.cpp  lekarz.cpp  logger.cpp  main.cpp  manager.cpp  pacjent.cpp  patient.cpp  reg_controller.cpp  registration.cpp  rejestracja.cpp  sor_common.hpp  triage.cpp  util.cpp
tests/: run_tests.sh  test_01_startup_cleanup.sh  test_02_process_limit.sh  test_03_stress_no_deadlock.sh  test_04_kill_children.sh  test_doctor_signal.cpp  test_ipc_init.cpp  test_occupancy_invariant.cpp  test_patient_flow.sh  test_startup_cleanup.sh
